--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 # Ollama LLM Configuration
-spring.ai.ollama.base-url=${SPRING_AI_OLLAMA_BASE_URL:http://localhost:32434}
-spring.ai.ollama.chat.options.model=${SPRING_AI_OLLAMA_CHAT_MODEL:phi3}
+
+spring.ai.ollama.base-url=http://localhost:31434
+spring.ai.ollama.chat.model=phi3
+spring.ai.ollama.embedding.model=nomic-embed-text
+
+
+
 
 # Datasource Configuration (for pgvector)
 spring.datasource.url=jdbc:postgresql://localhost:30432/scdf-db
@@ -11,7 +16,7 @@ spring.datasource.password=bitnami
 spring.ai.vectorstore.pgvector.table=vector_store
 spring.ai.vectorstore.pgvector.dimensions=768
 spring.ai.vectorstore.pgvector.index-type=HNSW
-spring.ai.vectorstore.pgvector.distance-type=COSINE
+spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
 
 # Spring Boot
 server.port=8080
