Update RAG service and application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,18 @@ spring.ai.vectorstore.pgvector.dimensions=768
 spring.ai.vectorstore.pgvector.index-type=HNSW
 spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
 
+# Logging Configuration
+logging.level.org.springframework.ai=DEBUG
+logging.level.org.springframework.web.client.RestClient=DEBUG
+logging.level.org.springframework.http.client=DEBUG
+logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
+logging.level.org.springframework.ai.ollama=TRACE
+logging.level.org.springframework.ai.retry=DEBUG
+logging.level.org.springframework.ai.vectorstore=DEBUG
+logging.level.com.baskettecase.ragui.service.RagService=INFO
+logging.level.org.springframework.ai.rag=INFO
+
 # Spring Boot
 server.port=8080
 spring.main.web-application-type=servlet
