Add Cloud Foundry deployment configuration and documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
-# Ollama LLM Configuration
+# Default profile configuration (for local development)
 
-spring.ai.ollama.base-url=http://localhost:31434
-spring.ai.ollama.chat.model=phi3
+# Ollama LLM Configuration
+spring.ai.ollama.base-url=${OLLAMA_BASE_URL:http://localhost:11434}
+spring.ai.ollama.chat.model=llama2
 spring.ai.ollama.embedding.model=nomic-embed-text
 
+# Database Configuration (for pgvector)
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:ragui}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-
-
-# Datasource Configuration (for pgvector)
-spring.datasource.url=jdbc:postgresql://localhost:30432/scdf-db
-spring.datasource.username=user
-spring.datasource.password=bitnami
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # PgVector Vector Store Configuration
 spring.ai.vectorstore.pgvector.table=vector_store
@@ -18,21 +21,19 @@ spring.ai.vectorstore.pgvector.dimensions=768
 spring.ai.vectorstore.pgvector.index-type=HNSW
 spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
 
-# Logging Configuration
-logging.level.org.springframework.ai=DEBUG
-logging.level.org.springframework.web.client.RestClient=DEBUG
-logging.level.org.springframework.http.client=DEBUG
-logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=DEBUG
-logging.level.reactor.netty.http.client=DEBUG
-logging.level.org.springframework.ai.ollama=TRACE
-logging.level.org.springframework.ai.retry=DEBUG
-logging.level.org.springframework.ai.vectorstore=DEBUG
-logging.level.com.baskettecase.ragui.service.RagService=INFO
-logging.level.org.springframework.ai.rag=INFO
-
-# Spring Boot
-server.port=8080
+# Server Configuration
+server.port=${PORT:8080}
 spring.main.web-application-type=servlet
 
 # Static Resources (for SPA)
 spring.web.resources.static-locations=classpath:/static/
+
+# Logging Configuration (less verbose in production)
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.org.springframework.ai=INFO
+logging.level.com.baskettecase=DEBUG
+
+# Actuator endpoints for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
