refactor: remove Ollama dependencies and fix Cloud Foundry deployment
- Removed all Ollama-related configurations and dependencies
- Updated application properties for Cloud Foundry deployment
- Fixed Spring Cloud Config Client configuration
- Updated service bindings in manifest.yml
- Added proper vector store configuration

--- a/manifest.yml
+++ b/manifest.yml
@@ -7,12 +7,13 @@ applications:
   disk_quota: 2G
   instances: 1
   buildpacks:
-    - java_buildpack
+    - java_buildpack_offline
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 21.+ } }'
     SPRING_PROFILES_ACTIVE: cloud
     JVM_HEAP_RATIO: 0.5
     JAVA_OPTS: '-Xmx1024m -Xss512k -XX:ReservedCodeCacheSize=512M -XX:MaxMetaspaceSize=512M'
   services:
-    - ragui-db
-    - ai-service
+    - embed-db
+    - chat-model
+    - embed-model
