--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 # Default profile configuration (for local development)
+spring.cloud.config.enabled=false
 
-# Ollama LLM Configuration
-spring.ai.ollama.base-url=${OLLAMA_BASE_URL:http://localhost:11434}
-spring.ai.ollama.chat.model=llama2
-spring.ai.ollama.embedding.model=nomic-embed-text
 
 # Database Configuration (for pgvector)
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:ragui}
