--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -1,26 +1,29 @@
 # Cloud Foundry specific configuration
 
+# Disable Spring Cloud Config Client
+spring.cloud.config.enabled=false
+
 # Database configuration from VCAP_SERVICES
-spring.datasource.url=${vcap.services.${SERVICE_NAME:ragui-db}.credentials.jdbcUrl:${vcap.services.${SERVICE_NAME:ragui-db}.credentials.uri}}
-spring.datasource.username=${vcap.services.${SERVICE_NAME:ragui-db}.credentials.username}
-spring.datasource.password=${vcap.services.${SERVICE_NAME:ragui-db}.credentials.password}
+spring.datasource.url=${vcap.services.embed-db.credentials.jdbcUrl:${vcap.services.embed-db.credentials.uri}}
+spring.datasource.username=${vcap.services.embed-db.credentials.username}
+spring.datasource.password=${vcap.services.embed-db.credentials.password}
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Vector store configuration
-spring.ai.vectorstore.pgvector.distance-type=cosine-distance
+spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
 spring.ai.vectorstore.pgvector.dimensions=1536
+spring.ai.vectorstore.pgvector.table-name=vector_store
 
 # Disable the default H2 console in production
 spring.h2.console.enabled=false
 
-# AI Service configuration (to be bound in Cloud Foundry)
-# The actual properties will be set by the service binding
-spring.ai.ollama.base-url=${vcap.services.${SERVICE_NAME:ai-service}.credentials.url:http://localhost:11434}
-spring.ai.ollama.chat.model=${vcap.services.${SERVICE_NAME:ai-service}.credentials.model:llama2}
-spring.ai.ollama.embedding.model=${vcap.services.${SERVICE_NAME:ai-service}.credentials.embedding-model:nomic-embed-text}
+# AI Service configuration from Cloud Foundry service binding
+spring.ai.openai.base-url=${vcap.services.chat-model.credentials.api_base}
+spring.ai.openai.api-key=${vcap.services.chat-model.credentials.api_key}
+spring.ai.openai.chat.model=${vcap.services.chat-model.credentials.model_name:gpt-3.5-turbo}
 
 # Actuator endpoints for health checks
 management.endpoints.web.exposure.include=health,info
