--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.baskettecase</groupId>
     <artifactId>ragui</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.7</version>
     <name>ragui</name>
     <description>Retrieval Augmented Generation UI with Spring AI, Ollama, and pgvector</description>
 
@@ -35,6 +35,7 @@
         <spring-ai.version>1.0.0</spring-ai.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
         <spring-cloud-services.version>4.1.7</spring-cloud-services.version>
+        <app.version>${project.version}</app.version>
     </properties>
 	<dependencies>
 		<dependency>
