--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -28,3 +28,10 @@ spring.ai.openai.chat.model=${vcap.services.chat-model.credentials.model_name:gp
 # Actuator endpoints for health checks
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+# Detailed HTTP Client and Spring AI Logging for Debugging
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.apache.http.wire=DEBUG
+logging.level.org.apache.hc.client5.http.wire=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
+logging.level.org.springframework.ai=TRACE
