--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@
 applications:
 - name: ragui
   random-route: true
-  path: target/ragui-0.3.9.jar
+  path: target/ragui-0.3.10.jar
   memory: 2G
   disk_quota: 2G
   instances: 1
@@ -15,6 +15,6 @@ applications:
     JAVA_OPTS: '-Xmx1024m -Xss512k -XX:ReservedCodeCacheSize=512M -XX:MaxMetaspaceSize=512M'
   services:
     - embed-db
-    # - chat-model
-    - chat-mistral-vision
+    - chat-model
+    #- chat-mistral-vision
     - embed-model
