--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: ragui
+- name: ragui-test
   random-route: true
-  path: target/ragui-0.3.10.jar
+  path: target/ragui-0.3.12.jar
   memory: 2G
   disk_quota: 2G
   instances: 1
