--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -17,6 +17,13 @@ spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
 spring.ai.vectorstore.pgvector.dimensions=1536
 spring.ai.vectorstore.pgvector.table-name=vector_store
 
+# RAG Configuration - More permissive similarity threshold for cloud
+ragui.vector.similarity-threshold=0.3
+ragui.vector.top-k=10
+
+# Debug option to bypass query cleaning (set to true for troubleshooting)
+ragui.debug.skip-query-cleaning=true
+
 # Disable the default H2 console in production
 spring.h2.console.enabled=false
 
@@ -24,6 +31,15 @@ spring.h2.console.enabled=false
 spring.ai.openai.base-url=${vcap.services.chat-model.credentials.api_base}
 spring.ai.openai.api-key=${vcap.services.chat-model.credentials.api_key}
 spring.ai.openai.chat.model=${vcap.services.chat-model.credentials.model_name:gpt-3.5-turbo}
+spring.ai.openai.embedding.options.model=${vcap.services.*.credentials.embedding-model:text-embedding-3-small}
+
+
+# Embedding model configuration from Cloud Foundry service binding
+#spring.ai.openai.embedding.options.model=${vcap.services.embed-model.credentials.model_name:text-embedding-ada-002}
+
+# Default user configuration
+app.security.default-user.username=tanzu
+app.security.default-user.password=t@nzu123
 
 # Actuator endpoints for health checks
 management.endpoints.web.exposure.include=health,info
