--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # Default profile configuration (for local development)
 spring.cloud.config.enabled=false
 
+# OpenAI Configuration for embedding model
+spring.ai.openai.api-key=${OPENAI_API_KEY:your-openai-api-key}
+spring.ai.openai.embedding.options.model=text-embedding-ada-002
 
 # Database Configuration (for pgvector)
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:ragui}
@@ -14,9 +17,20 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # PgVector Vector Store Configuration
 spring.ai.vectorstore.pgvector.table=vector_store
-spring.ai.vectorstore.pgvector.dimensions=768
+spring.ai.vectorstore.pgvector.dimensions=1536
 spring.ai.vectorstore.pgvector.index-type=HNSW
 spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
+
+# RAG Configuration - More permissive similarity threshold for debugging
+ragui.vector.similarity-threshold=0.3
+ragui.vector.top-k=10
+
+# Debug option to bypass query cleaning (set to true for troubleshooting)
+ragui.debug.skip-query-cleaning=true
+
+# Default user configuration
+app.security.default-user.username=tanzu
+app.security.default-user.password=t@nzu123
 
 # Server Configuration
 server.port=${PORT:8080}
@@ -34,3 +48,7 @@ logging.level.com.baskettecase=DEBUG
 # Actuator endpoints for health checks
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+# Logging for debugging vector search issues
+logging.level.com.baskettecase.ragui.service.RagService=DEBUG
+logging.level.org.springframework.ai.vectorstore=DEBUG
