--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -17,9 +17,21 @@ spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
 spring.ai.vectorstore.pgvector.dimensions=1536
 spring.ai.vectorstore.pgvector.table-name=vector_store
 
-# RAG Configuration - More permissive similarity threshold for cloud
-ragui.vector.similarity-threshold=0.3
-ragui.vector.top-k=10
+# RAG Configuration - More selective similarity threshold for better quality matches
+ragui.vector.similarity-threshold=0.6
+ragui.vector.top-k=5
+
+# RAG Context Management - Reduced for token limits
+ragui.context.max-chars=4000
+ragui.context.min-doc-chars=200
+
+# Token Management - Prevent LLM truncation
+ragui.token.max-total-tokens=8000
+ragui.token.max-context-tokens=3000
+ragui.token.max-response-tokens=2000
+
+# Query Expansion Configuration
+ragui.query.expansion.enabled=true
 
 # Debug option to bypass query cleaning (set to true for troubleshooting)
 ragui.debug.skip-query-cleaning=true
