--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -36,6 +36,9 @@ ragui.query.expansion.enabled=true
 # Debug option to bypass query cleaning (set to true for troubleshooting)
 ragui.debug.skip-query-cleaning=true
 
+# Debug option to enable reasoning patterns in responses (set to false to disable reasoning)
+ragui.debug.enable-reasoning=false
+
 # Disable the default H2 console in production
 spring.h2.console.enabled=false
 
