--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,9 @@ ragui.query.expansion.enabled=true
 # Debug option to bypass query cleaning (set to true for troubleshooting)
 ragui.debug.skip-query-cleaning=true
 
+# Debug option to enable reasoning patterns in responses (set to false to disable reasoning)
+ragui.debug.enable-reasoning=false
+
 # Default user configuration
 app.security.default-user.username=tanzu
 app.security.default-user.password=t@nzu123
