feat: comprehensive RAG UI improvements and deployment enhancements
- Enhanced deployment scripts with secure credential handling
- Fixed LLM response truncation in Pure LLM and RAG + LLM Fallback modes
- Standardized mode identifiers with consistent bold formatting
- Added wildcard JAR path support in manifest.yml
- Integrated build-secure.sh with release script
- Increased token limits to prevent truncation (16K total, 6K each)
- Updated system prompts for consistent behavior across modes
- Added comprehensive documentation updates
- Enhanced error handling and logging throughout

Key improvements:
* deploy-secure.sh now uses build-secure.sh for secure builds
* Release script automatically updates manifest.yml with correct JAR path
* All mode identifiers use consistent bold blue formatting
* Token limits increased by 33% to prevent truncation
* Manifest.yml uses wildcard pattern for automatic version handling

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ target/
 src/main/resources/static/version.js
 manifest.tmp
 
+# Secure credentials - do not track
+src/main/resources/application-secure.properties
+
+release.sh
+.release-exec
