--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -1,3 +1,5 @@
+spring.config.import=optional:classpath:application-secure.properties
+
 # Cloud Foundry specific configuration
 
 # Disable Spring Cloud Config Client
@@ -26,9 +28,9 @@ ragui.context.max-chars=4000
 ragui.context.min-doc-chars=200
 
 # Token Management - Prevent LLM truncation
-ragui.token.max-total-tokens=8000
-ragui.token.max-context-tokens=3000
-ragui.token.max-response-tokens=2000
+ragui.token.max-total-tokens=16000
+ragui.token.max-context-tokens=6000
+ragui.token.max-response-tokens=6000
 
 # Query Expansion Configuration
 ragui.query.expansion.enabled=true
@@ -52,9 +54,8 @@ spring.ai.openai.embedding.options.model=${vcap.services.*.credentials.embedding
 #spring.ai.openai.embedding.options.model=${vcap.services.embed-model.credentials.model_name:text-embedding-ada-002}
 
 
-# Default user configuration
-app.security.default-user.username=tanzu
-app.security.default-user.password=t@nzu123
+# Default user configuration - moved to application-secure.properties
+# Credentials are now managed via environment variables or secure properties file
 
 # Actuator endpoints for health checks
 management.endpoints.web.exposure.include=health,info
