--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,9 +30,9 @@ ragui.context.max-chars=4000
 ragui.context.min-doc-chars=200
 
 # Token Management - Prevent LLM truncation
-ragui.token.max-total-tokens=8000
-ragui.token.max-context-tokens=3000
-ragui.token.max-response-tokens=2000
+ragui.token.max-total-tokens=16000
+ragui.token.max-context-tokens=6000
+ragui.token.max-response-tokens=6000
 
 # Query Expansion Configuration
 ragui.query.expansion.enabled=true
@@ -42,9 +42,8 @@ ragui.debug.skip-query-cleaning=true
 
 
 
-# Default user configuration
-app.security.default-user.username=tanzu
-app.security.default-user.password=t@nzu123
+# Default user configuration - moved to application-secure.properties
+# Credentials are now managed via environment variables or secure properties file
 
 # Server Configuration
 server.port=${PORT:8080}
